--- a/lesson2/home work2/task2.html
+++ b/lesson2/home work2/task2.html
@@ -5,65 +5,77 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>task2</title>
     
-    <style type="text/css">
+    <!--<style type="text/css">
         table { border-collapse: collapse; width: 100px height: 100px}
         td { border: 5px solid #000; }
-    </style>
+    </style>-->
 </head>
 <body>
    <table border="1">
+    <!-- первый ряд -->
     <tr>
         <td width="100px" height="100px" colspan="2"></td>
         <td width="100px" height="100px" colspan="3"></td>
         <td width="100px" height="100px" colspan="2" bgcolor="#fffa69"></td>
     </tr>
+    <!-- второй ряд -->
     <tr>
         <td width="100px" height="100px" rowspan="2"></td>
         <td width="100px" height="100px" colspan="4" rowspan="4" bgcolor="#ff5b2d"></td>
         <td width="100px" height="100px" colspan="2" rowspan="2" bgcolor="#fffa69"></td>
-        <td width="100px" height="100px"></td>
+
     </tr>
+    <!-- третий ряд -->
     <tr>
         <td width="100px" height="100px"></td>
-        <td width="100px" height="100px"></td>
-        <td width="100px" height="100px"></td>
+
+
+
     </tr>
+    <!-- четвертый ряд -->
     <tr>
         <td width="100px" height="100px" rowspan="3"></td>
+        <td width="100px" height="100px" rowspan="2"></td>
+        <td width="100px" height="100px" rowspan="2"></td>
         <td width="100px" height="100px"></td>
         <td width="100px" height="100px"></td>
+
     </tr>
+    <!-- пятый ряд -->
     <tr>
         <td width="100px" height="100px"></td>
         <td width="100px" height="100px"></td>
+
+
     </tr>
+    <!-- шестой ряд -->
     <tr>
+        <td width="100px" height="100px" colspan="2" rowspan="2" bgcolor="#000000"></td>
+        <td width="100px" height="100px" colspan="2"></td>
+        <td width="100px" height="100px" colspan="2"></td>
         <td width="100px" height="100px"></td>
-        <td width="100px" height="100px"></td>
-        <td width="100px" height="100px"></td>
-        <td width="100px" height="100px"></td>
-        <td width="100px" height="100px"></td>
-        <td width="100px" height="100px"></td>
+
     </tr>
+    <!-- седьмой ряд -->
     <tr>
+        <td width="100px" height="100px" rowspan="3" bgcolor="#fffa69"></td>
+        <td width="100px" height="100px" colspan="2"></td>
+        <td width="100px" height="100px" colspan="2" rowspan="2" bgcolor="#074481"></td>
         <td width="100px" height="100px"></td>
         <td width="100px" height="100px"></td>
-        <td width="100px" height="100px"></td>
-        <td width="100px" height="100px"></td>
-        <td width="100px" height="100px"></td>
-        <td width="100px" height="100px"></td>
-        <td width="100px" height="100px"></td>
+
     </tr>
+    <!-- восьмой ряд -->
     <tr>
+        <td width="100px" height="100px" colspan="2" rowspan="2"></td>
+        <td width="100px" height="100px" colspan="2"></td>
         <td width="100px" height="100px"></td>
         <td width="100px" height="100px"></td>
         <td width="100px" height="100px"></td>
-        <td width="100px" height="100px"></td>
-        <td width="100px" height="100px"></td>
-        <td width="100px" height="100px"></td>
-        <td width="100px" height="100px"></td>
+
     </tr>
-        <tr>
+    <!-- девятый ряд -->
+    <tr>
         <td width="100px" height="100px"></td>
         <td width="100px" height="100px"></td>
         <td width="100px" height="100px"></td>
