--- a/lesson2/home work2/task3.html
+++ b/lesson2/home work2/task3.html
@@ -3,9 +3,73 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Form</title>
 </head>
 <body>
-    
+<form action="">
+    Name <br><input type="text" name="name"><br>
+    Email <br/><input type="text" name="mail"><br>
+    Sex <br>
+    <input type="radio" name="sex">Male 
+    <input type="radio" name="sex">Female <br>
+    Current status <br>
+    <input type="checkbox" name="check1"> Student <br>
+    <input type="checkbox" name="check2"> Employed <br>
+    <input type="checkbox" name="check3"> Unemployed <br>
+    Month and Year of birth <br>
+    <select>
+        <option>Январь</option>
+        <option>Февраль</option>
+        <option>Март</option>
+        <option>Апрель</option>
+        <option>Май</option>
+        <option>Июнь</option>
+        <option>Июль</option>
+        <option>Август</option>
+        <option>Сентябрь</option>
+        <option>Октябрь</option>
+        <option>Ноябрь</option>
+        <option>Декабрь</option>
+    </select>
+    <select>
+        <option>2000</option>
+        <option>2001</option>
+        <option>2002</option>
+        <option>2003</option>
+        <option>2004</option>
+        <option>2005</option>
+        <option>2006</option>
+        <option>2007</option>
+        <option>2008</option>
+        <option>2009</option>
+    </select>
+    <br>
+    Skills and Tehnologes <br>
+    <select>
+    <optgroup label="Tech skills"
+        <option>HTML</option>
+        <option>CSS</option>
+        <option>JavaScript</option>
+        <option>git</option>
+    </optgroup>
+    <optgroup label="Soft skills">
+        <option>Time mansgment</option>
+        <option>Proactivity</option>
+        <option>Teamwork</option>
+        <option>Lidership</option>
+    </optgroup>
+    </select>
+
+
+    <br>
+    Photo <br>
+    <input type="file">
+    <br>
+    Comments <br>
+    <textarea></textarea> <br>
+    <input type="submit">
+    <input type="reset">
+
+</form>    
 </body>
 </html>
