--- a/lesson2/home work2/task3.html
+++ b/lesson2/home work2/task3.html
@@ -46,7 +46,7 @@
     <br>
     Skills and Tehnologes <br>
     <select>
-    <optgroup label="Tech skills"
+    <optgroup label="Tech skills">
         <option>HTML</option>
         <option>CSS</option>
         <option>JavaScript</option>
